--- a/index.html
+++ b/index.html
@@ -73,18 +73,39 @@
                 <div class="row">
 
                     <!-- SUB-ROW #1 -->
-                    <div class="col col-12 col-sm-4 col-md-4">
-                        <span>Remover propagandas</span>
+                    <div class="col col-12 col-sm-3 col-md-3">
+                        <div>
+                            <div>
+                                <img src="img/png/all-devices.png" alt="Todos dispositivos">
+                            </div>
+                            <div>
+                                <span>Simule todos os dispositivos</span>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- SUB-ROW #2 -->
-                    <div class="col col-12 col-sm-4 col-md-4">
-                        <span>Remover propagandas</span>
+                    <div class="col col-12 col-sm-3 col-md-3">
+                        <div>
+                            <div>
+                                <img src="img/svg/illimited-logo.svg" alt="Todos dispositivos">
+                            </div>
+                            <div>
+                                <span>Screencasts ilimitados</span>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- SUB-ROW #3 -->
-                    <div class="col col-12 col-sm-4 col-md-4">
-                        <span>Remover propagandas</span>
+                    <div class="col col-12 col-sm-3 col-md-3">
+                        <div>
+                            <div>
+                                <img src="img/svg/remove-ads-logo.svg" alt="Todos dispositivos">
+                            </div>
+                            <div>
+                                <span>Remover propagandas</span>
+                            </div>
+                        </div>
                     </div>
 
                 </div>
